--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "@material-ui/core": "^1.2.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   }
